# Playground

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Trunk.toml  index.html
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md  MVP_SCOPE.md  OPEN_QUESTIONS.md  PROJECT_CONTEXT.md  RELEASE_NOTES_v1.0.0.md  REPOSITORY_METADATA.md  ROADMAP.md  WORKING_RULES.md
src/: app.rs  canvas.rs  fill.rs  fonts.rs  lib.rs  main.rs  model.rs  native.rs  render.rs  storage.rs  web.rs
