[package]
name = "rust_paint_foundation"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
egui = { version = "=0.33.3", default-features = false }
eframe = { version = "=0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
rfd = "=0.17.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "=0.4.58"
web-sys = { version = "=0.3.85", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
